# algoforge

./: .gitignore  Cargo.toml  README.md  algoforge.pyi  devenv.nix  local_test.sh  new_release.sh  pyproject.toml
.github/actions/build_sdist/: action.yaml
.github/actions/build_wheels/: action.yaml
.github/actions/codeartifact_publish/: action.yaml
.github/actions/unit_test/: action.yaml
.github/workflows/: auto-release.yaml  ci.yaml  draft-release.yaml  publish.yaml  release.yaml  run-build.yaml  test.yaml  test_and_build.yaml  test_build.yaml
data/: lemma_map.csv  spelling_map.csv
examples/: main.py
python/algoforge/: __init__.py  lib.py  module.py  processor_defs.py
src/: algos.rs  error.rs  lib.rs  main.rs  model.rs  pipeline_builder.rs
src/pipeline_components/: lemmatizer.rs  lowercase.rs  mod.rs  porter_stemmer.rs  post_processor.rs  pre_processor.rs  spelling_mapper.rs  tokenizer.rs
