[package]
name = "algoforge"
version = "0.1.0"
edition = "2021"

[lib]
name = "algoforge"
crate-type = ["cdylib"]

[dependencies]
csv = "1.3.1"
lazy_static = "1.5.0"
porter-stemmer = "0.1.2"
pyo3 = { version = "0.22.6", features = ["extension-module"] }
pythonize = "0.22.0"
rayon = "1.10.0"
regex = "1.11.1"
serde = "1.0.215"
serde_json = "1.0.132"
thiserror = "2.0.3"

[build-dependencies]
pyo3-build-config = "0.22.6"

[dev-dependencies]
tempfile = "3.14.0"
