[package]
name = "algoforge"
version = "0.1.1"
edition = "2021"
authors = ["Gergo Nemeth <gergo@thisishace.com>"]
description = "High-performance text processing pipeline construction library"
license = "Proprietary"

[lib]
name = "algoforge"
crate-type = ["cdylib", "rlib"]

[dependencies]
crossbeam = "0.8.4"
csv = "1.3.1"
num_cpus = "1.16.0"
porter-stemmer = "0.1.2"
pythonize = "0.22.0"
rayon = "1.10.0"
serde = "1.0.215"
serde_json = "1.0.132"
thiserror = "2.0.3"

[dependencies.pyo3]
version = "0.22.4"
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[build-dependencies]
pyo3-build-config = "0.22.6"

[dev-dependencies]
tempfile = "3.14.0"
