[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "algoforge"
version = "0.1.0"
description = "High-performance text processing pipeline construction library"
authors = [{ name = "Gergo Nemeth", email = "gergo@thisishace.com" }]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "algoforge.algoforge"
